# gSolB-Jet

./: .cproject  .gitignore  .project  CMakeLists.txt  CMakeSettings.json  README.md  cll.mac  gSolB.cpp  gSolB.h  single_action.mac  vis.mac
analyser/: graphic_builder.py
include/: CSVSaver.h  UActionInitialization.h  UActionInitialization.hpp  UDetector.h  UDetector.hpp  UDetectorConstruction.h  UDetectorConstruction.hpp  UMaterials.h  UMaterials.hpp  UPhysicsList.h  UPhysicsList.hpp  UPrimaryGeneratorAction.h  UPrimaryGeneratorAction.hpp  URunAction.h  URunAction.hpp
src/: UActionInitialisation.cpp  UDetector.cpp  UDetectorConstruction.cpp  UPhysicsList.cpp  UPrimaryGeneratorAction.cpp  uRunAction.cpp
